apps/backstage/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backstage
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Other
    gethomepage.dev/name: Backstage
    gethomepage.dev/href: "https://backstage.home.alden.ai"
    gethomepage.dev/description: "Service Catalog"
    gethomepage.dev/icon: backstage.svg
    gethomepage.dev/app: backstage # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/pod-selector: app.kubernetes.io/name=backstage
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: default-https-gateway
      namespace: istio-system
  hostnames:
    - backstage.home.alden.ai
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: backstage
          port: 80
          weight: 1
